<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">高校通</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_tab_message">消息</string>
    <string name="text_tab_service">服务</string>
    <string name="text_tab_profile">个人</string>
    <string name="text_tab_setting">设置</string>
    <string name="text_loginsuccess">~~登陆成功~~</string>
    <string name="toast_login_failed">~~登陆失败~~</string>
    <string name="text_account">账号与安全</string>
    <string name="text_notification">通知与消息</string>
    <string name="text_privacy">隐私</string>
    <string name="text_general">通用</string>
    <string name="text_about">关于高校通</string>
    <string name="text_help">帮助</string>
    <string name="text_fast">周边餐管</string>
    <string name="button_backward">返回</string>
    <string name="button_submit">提交</string>
    <string name="text_age">年龄</string>
    <string name="text_gender">性别</string>
    <string name="text_username">用户名</string>
    <string name="text_nickname">昵称</string>
    <string name="text_place">地区</string>
    <string name="text_learning">电话号码</string>
    <string name="text_education">学历层次</string>
    <string name="text_speciality">专业</string>
    <string name="text_credit">我的积分</string>
    <string name="text_official_website">官方网站</string>
    <string name="text_rate_app">去评分</string>
    <string name="text_about_help">帮助</string>
    <string name="text_about_feedback">反馈</string>
    <string name="text_about_update">检查更新</string>
    <string name="text_company">高校通 版权所有 由中北大学软件学院提供技术支持</string>
    <string name="text_copyright">Copyright &#169; 2015-2020 Shizhenbao All Rights Reserved.</string>
    <string name="text_exit">退&#160;出</string>
    <string name="title_activity_login">用户登录</string>
    <string name="title_register">用户注册</string>
    <string name="action_settings">Settings</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="message_search_hint">搜索&#8230;</string>
    
    <string name="list_no_data_lost">暂时还未有失物信息</string>
    <string name="list_no_data_found">暂时还未有招领信息</string>
    
    <string name="title_hint">标题</string>
    <string name="describe_hint">描述</string>
    <string name="photo_hint">手机</string>
    
    <string name="progress_loading">正在获取数据..</string>

</resources>