<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <LinearLayout
        android:id="@+id/layout_CONTENT"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="@dimen/table_padding" >

        <LinearLayout
            android:id="@+id/layout_TABLE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/table_margin"
            android:background="@color/table_background"
            android:orientation="vertical"
            android:padding="@dimen/table_padding" >

            <RelativeLayout
                android:id="@+id/layout_nickname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:layout_marginBottom="@dimen/row_margin"
                android:background="@drawable/row_selector"
                android:paddingLeft="@dimen/row_padding_left"
                android:paddingRight="@dimen/row_padding_right" >

                <TextView
                    style="@style/text_black_18"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_profile_nickname_normal"
                    android:drawablePadding="4dp"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/text_username"/>

                <TextView
                    android:textColor="@color/gray"
                    android:text="大冬瓜"
                    android:id="@+id/tv_username"
                    style="@style/text_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/iv_icon"
                    android:paddingRight="@dimen/row_padding_right" />

                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/go" />
            </RelativeLayout>

            

            <RelativeLayout
                android:id="@+id/layout_age"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:layout_marginBottom="@dimen/row_margin"
                android:background="@drawable/row_selector"
                android:paddingLeft="@dimen/row_padding_left"
                android:paddingRight="@dimen/row_padding_right" >

                <TextView
                    style="@style/text_black_18"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_profile_age_normal"
                    android:drawablePadding="4dp"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/text_gender" />

                <TextView
                     android:textColor="@color/gray"
                    android:text="男"
                    android:id="@+id/tv_sex"
                    style="@style/text_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/iv_icon"
                    android:paddingRight="@dimen/row_padding_right"/>

                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/go" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_place"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:layout_marginBottom="@dimen/row_margin"
                android:background="@drawable/row_selector"
                android:paddingLeft="@dimen/row_padding_left"
                android:paddingRight="@dimen/row_padding_right" >

                <TextView
                    style="@style/text_black_18"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_profile_region_normal"
                    android:drawablePadding="4dp"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/text_age"/>

                <TextView
                     android:textColor="@color/gray"
                    android:text="90后"
                    android:id="@+id/tv_age"
                    style="@style/text_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/iv_icon"
                    android:paddingRight="@dimen/row_padding_right" />

                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/go" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_health"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:layout_marginBottom="@dimen/row_margin"
                android:background="@drawable/row_selector"
                android:paddingLeft="@dimen/row_padding_left"
                android:paddingRight="@dimen/row_padding_right" >

                <TextView
                    style="@style/text_black_18"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_profile_health_normal"
                    android:drawablePadding="4dp"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="年级"
                    />

                <TextView
                     android:textColor="@color/gray"
                    android:text="北京市"
                    android:id="@+id/tv_gard"
                    style="@style/text_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/iv_icon"
                    android:paddingRight="@dimen/row_padding_right" />

                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/go" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginBottom="@dimen/row_margin"
                android:id="@+id/layout_tags"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:background="@drawable/row_selector"
                android:paddingLeft="@dimen/row_padding_left"
                android:paddingRight="@dimen/row_padding_right" >

                <TextView
                    android:id="@+id/text_tags"
                    style="@style/text_black_18"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_profile_tags_normal"
                    android:drawablePadding="4dp"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="东区/西区"/>

                 <TextView
                      android:textColor="@color/gray"
                    android:text="大专"
                    android:id="@+id/tv_dopart"
                    style="@style/text_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/iv_icon"
                    android:paddingRight="@dimen/row_padding_right" />
                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/go" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginBottom="@dimen/row_margin"
                android:id="@+id/layout_tags"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:background="@drawable/row_selector"
                android:paddingLeft="@dimen/row_padding_left"
                android:paddingRight="@dimen/row_padding_right" >

                <TextView
                    android:id="@+id/text_tags"
                    style="@style/text_black_18"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_profile_tags_normal"
                    android:drawablePadding="4dp"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/text_speciality" />

                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/go" />

                  <TextView
                       android:textColor="@color/gray"
                    android:text="计算机"
                    android:id="@+id/tv_school"
                    style="@style/text_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/iv_icon"
                    android:paddingRight="@dimen/row_padding_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_tags"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:background="@drawable/row_selector"
                android:paddingLeft="@dimen/row_padding_left"
                android:paddingRight="@dimen/row_padding_right" >

                <TextView
                    android:id="@+id/text_tags"
                    style="@style/text_black_18"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_profile_tags_normal"
                    android:drawablePadding="4dp"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/text_learning"/>

                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/go" />

                <TextView
                     android:textColor="@color/gray"
                    android:text="18235139300"
                    android:id="@+id/tv_phone"
                    style="@style/text_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/iv_icon"
                    android:paddingRight="@dimen/row_padding_right" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_TABLE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/table_margin"
            android:background="@color/table_background"
            android:padding="@dimen/table_padding" >

            <RelativeLayout
                
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:background="@drawable/row_selector"
                android:paddingLeft="@dimen/row_padding_left"
                android:paddingRight="@dimen/row_padding_right"
                 >

            <Button
                android:id="@+id/layout_logout"
                style="@style/text_black_18"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:layout_alignParentLeft="true"
                android:background="@drawable/row_selector"
                android:gravity="center_vertical|center"
                
                android:text="退出登录" />
                
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>